# geonamescache

./: .gitattributes  .gitignore  .landscape.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev_requirements.txt  fabfile.py  geonamescache.py  hatch_build.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: pythonpackage.yml  test.yml
docs/: Makefile  conf.py  geonamescache.rst  index.rst  make.bat  modules.rst
geonamescache/: __init__.py  admin_level_1.json  admin_level_1_by_name.json  admin_level_2_by_name.json  cities.json  cities.pickle  continents.json  countries-by-iso.csv  countries.csv  countries.json  geonamescache.py  geonamesdata.py  locations_source.py  mappers.py  mappings.py  types.py  us_counties.json
geonamescache/data/: cities1000.json  cities15000.json  cities500.json  cities5000.json  continents.json  countries.json  us_counties.json
geonamescache/geonames/: geonames.py  lookup_alt_names_on_wiki.py
geonamescache/geonames/data/: admin1Codes.txt
geonamescache/locations_source/: locations_source.py
geonamescache/locations_source/geonames/: utils.py
geonamescache/locations_source/geonames/data/: admin2Codes.txt
geonamescache/locations_source/osm_names/: add_missing_countries.py  lookup_alt_names_on_wiki.py  osm_names.py
geonamescache/locations_source/osm_names/data/: alt_wiki_names.tsv  countries.json  us_states.tsv
geonamescache/osm_names/: osm_names.py
geonamescache/osm_names/data/: countries.json
locations_source/: locations_source.py
locations_source/geonames/: geonames.py
locations_source/geonames/data/: countryInfo.txt
locations_source/osm_names/: lookup_alt_names_on_wiki.py  osm_names.py  utils.py
locations_source/osm_names/data/: countries.csv
osm_names/: osm_names_search.py
scripts/: admin_level_1.py  admin_level_2.py  cities.py  continents.py  countries.py  countries2csv.py  lookup_alt_names_on_wiki.py  us_counties.py  us_states.js
tests/: test_data.py  test_geonamescache.py  test_mappings.py
